--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -38,6 +38,7 @@ def kotlinClasses = fileTree(
 
 tasks.withType(Test) {
     jacoco.includeNoLocationClasses = true
+    jacoco.excludes = ['jdk.internal.*']
 }
 
 task jacocoTestReport(type : JacocoReport, dependsOn : ['testDebugUnitTest']) {
