--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
     implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'com.android.volley:volley:1.1.1'
+    testImplementation 'org.mockito:mockito-core:3.5.13'
+    testImplementation 'org.json:json:20200518'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -50,4 +53,3 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.3.0'
 
 }
-
