--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,12 @@ dependencies {
     annotationProcessor "androidx.room:room-compiler:2.2.5"
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
-    implementation 'com.google.firebase:firebase-analytics:17.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
+    implementation 'com.google.firebase:firebase-analytics:17.6.0'
     implementation 'com.android.volley:volley:1.1.1'
     testImplementation 'org.mockito:mockito-core:3.5.13'
+    implementation 'androidx.arch.core:core-testing:2.1.0'
+    androidTestImplementation 'org.mockito:mockito-android:2.11.0'
     testImplementation 'org.json:json:20200518'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
