--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
 dependencies {
 
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation "androidx.room:room-runtime:2.2.5"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     annotationProcessor "androidx.room:room-compiler:2.2.5"
