--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ buildscript {
     repositories {
         google()
         jcenter()
+
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath 'org.jacoco:org.jacoco.core:0.7.9'
 
@@ -18,6 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven{url 'https://jitpack.io'}
     }
 }
 
