--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,6 +122,7 @@ jobs:
     <<: *android_config
     steps:
       - checkout
+      - *decode_apikeys_properties
       - *restore_cache
       - run:
           name: Download dependencies
@@ -146,6 +147,7 @@ jobs:
     <<: *android_config
     steps:
       - checkout
+      - *decode_apikeys_properties
       - *restore_cache
       - run:
           name: Download dependencies
