--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,6 +203,7 @@ jobs:
     <<: *android_config
     steps:
       - checkout
+      - *decode_apikeys_properties
       - *restore_cache
       - run:
           name: Download dependencies
