--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,6 +86,12 @@ references:
       name: Decode Google Cloud credentials
       command: echo $GCLOUD_SERVICE_KEY | base64 -di > ${HOME}/client-secret.json
 
+  # apikeys.properties
+  decode_apikeys_properties: &decode_apikeys_properties
+    run:
+      name: Decode apikeys.properties
+      command: echo $APIKEYS_PROPERTIES | base64 -di > apikeys.properties
+
 jobs:
 
   # Build debug APK for unit tests and an instrumented test APK
@@ -94,6 +100,7 @@ jobs:
     <<: *android_config
     steps:
       - checkout
+      - *decode_apikeys_properties
       - *restore_cache
       - run:
           name: Download dependencies
@@ -115,6 +122,7 @@ jobs:
     <<: *android_config
     steps:
       - checkout
+      - *decode_apikeys_properties
       - *restore_cache
       - run:
           name: Download dependencies
@@ -139,6 +147,7 @@ jobs:
     <<: *android_config
     steps:
       - checkout
+      - *decode_apikeys_properties
       - *restore_cache
       - run:
           name: Download dependencies
@@ -194,6 +203,7 @@ jobs:
     <<: *android_config
     steps:
       - checkout
+      - *decode_apikeys_properties
       - *restore_cache
       - run:
           name: Download dependencies
